Done on demo's and playtesting sessions.

--- a/Reports/Final Report/QualityAssurance.tex
+++ b/Reports/Final Report/QualityAssurance.tex
@@ -218,5 +218,22 @@
 	\section{Demo's and playtesting sessions} \label{sec:demos}
 		In order to see how other people would interact with our software (and
 		also partially to see if solving the game actually required collaboration
-		of multiple people), some play testing sessions and demo's with the
-		client were hosted. Because of time constraints, 
+		of multiple people), several demo's with the client were hosted. Because 
+		of time constraints, only one play testing session was hosted before
+		the final report had to be handed in. The main output of that play
+		testing session was that the technology was far from perfect (which
+		is something that we knew from the start, so that was not really useful).
+		However, these test subjects were other EEMCS students, and there
+		were plans to test with students of other faculties, but that was
+		cut due to time constraints (as mentioned above).
+		
+		The demo's with Stephan (the client) hit a rough start the first few
+		times, as the game that would be demonstrated would often not work
+		right before the demo was held. After some demo's, however, the game
+		was far enough into development that it would be easy to find an
+		actually working version. The best demo's were demo's hosted
+		after week 9 (right before the project had to be finished), because
+		the game was nearly done. The feedback of these demo's is that Stephan
+		liked the game, and that he looked forward to playing it. This means
+		that the client likes our product, a positive outcome.
+		
