Add more details about research applications to info sheet

--- a/Reports/InfoSheet.tex
+++ b/Reports/InfoSheet.tex
@@ -10,14 +10,14 @@
 \textbf{Project title:} Collaborative AR mirror game\\
 \textbf{Name of the client organization:} TU Delft\\
 \textbf{Date of the final presentation:} July 3, 2015\\
-\textbf{Final report:} TBA.\\
+\textbf{Final report:} TBA.
 
 \section*{Description of the project}
 Although augmented reality research has grown into a mature field over the last
 years, the aspects of situational awareness and presence of augmented reality
 are still open research topics. The mirrors AR game is a collaborative game that
 can be used to explore different perceptions of situational awareness and the
-effect on solving spatial puzzles. \\
+effect on solving puzzles. \\
 \\
 The main challenge of this project was to develop a system that intuitively lets
 co-located and remote players work together on a problem. Most of the research
@@ -41,10 +41,17 @@ the power to rotate mirrors and a good overview of the entire level. The players
 will need to cooperate to get all of the mirrors in the right places with the
 correct orientation to complete the level. \\
 \\
+The mechanics and restrictions of the game can be controlled to research the
+effects on collaboration. Examples:
+
+\begin{itemize}
+    \item Viewpoint of local players can be shown or hidden to remote players.
+    \item Remote camera could be locked or be allowed to move freely.
+    \item Hide the level for either the remote or local players to demand more
+    communication.
+\end{itemize}
 The game can support any number of players as long as there's at least one local
-and one remote player. The mechanics and restrictions of the game can be
-controlled to research the effects on collaboration. For example, the viewpoint
-of local players can be shown or hidden to remote players.
+and one remote player.
 
 \section*{Members of the project team}
 \textit{Name:} Thijs Boumans (T.Boumans-1@student.tudelft.nl)\\
@@ -61,7 +68,7 @@ of local players can be shown or hidden to remote players.
 \\
 \textit{Name:} Tim van Rossum (trvanrossum@gmail.com)\\
 \textit{Interests:} Algorithm Design, Software Engineering \\
-\textit{Contribution and role:} Final Report curator, Level Designer, Co-lead Software Designer \\
+\textit{Contribution and role:} Final Report curator, Level Designer, Co-lead Software Designer 
 
 \section*{Coach and client}
 \textbf{Coach:} Rafa\"el Bidarra, Computer Graphics, r.bidarra@tudelft.nl\\
