--- a/Reports/Final Report/Conclusion.tex
+++ b/Reports/Final Report/Conclusion.tex
@@ -1,8 +1,33 @@
 \chapter{Conclusion} \label{cha:conclusion}
-	%TODO Focus on the final state of the project.
-	%     Include how the project meets the set standards and requirements, 
-	%     and elaborate on how it could be improved.
-	%
-	%     Also reflect on the process as a whole, and indicate bottlenecks 
-	%     we encountered during development.
-	...
+    %TODO Focus on the final state of the project.
+    %     Include how the project meets the set standards and requirements, 
+    %     and elaborate on how it could be improved.
+    %
+    %     Also reflect on the process as a whole, and indicate bottlenecks 
+    %     we encountered during development.
+    
+    Despite some rocky development, we ended up with a fully playable game in
+    week 9 that met all of the must have and almost all of the should have
+    requirements. The should have requirements included mirror elevations, but
+    we found that this wouldn't work well in practice and replaced this feature
+    with portals. Those accomplish the same purpose of transferring a laser beam
+    across a wall. We've also done away with color combiners because the results
+    of mixing colors would be too complicated for players. The game can support
+    this, however, and these color mixers would be easy to implement. The main
+    takeaway here is that some of the should haves were not met for gameplay
+    reasons rather than technical problems.
+
+    The only component of the game that is still rather lacking is the one that
+    gave us the most trouble during development: marker tracking with AR
+    glasses. The glasses we are using for the game (Meta One) represent the
+    state-of-the-art of augmented reality see-through glasses, but they have a
+    field-of-view of just 35 degrees and a marker tracking framerate of about 5.
+    The first issue causes players to have a lack of overview unless they take
+    quite a few steps back from the table. The second issue causes the mirrors
+    to lag behind when the player moves their view, which diminishes the
+    immersion of the game. We repeatedly contacted the company behind the
+    eyewear, but there were no plans to improve on these issues any time soon.
+
+    Despite these limitations of the augmented reality technology, we have been
+    able to produce a fun and complete game to play that can be used to
+    experiment with situational awareness like the client desired.
