Add graphics class diagram

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -250,7 +250,13 @@
             Unity, this component is very small, containing only very limited 
             functionality that Unity did not already provide. The main 
             function included in this component is the code that draws the laser 
-            beam. 
+            beam.
+
+            \begin{figure}[ht]
+				\includegraphics[width=\textwidth]{ClassDiagramGraphics}
+				\caption{Class diagram of the \texttt{Graphics} component}
+				\label{fig:classdiagramgraphics}
+			\end{figure}
 
 \subsection{Experimental code: the RandomLevel component} \label{ssec:randomlevelcomponent}
 			The \texttt{RandomLevel} component is an abandoned and deleted
