Add info sheet to final report

--- a/Reports/Final Report/FinalReport.tex
+++ b/Reports/Final Report/FinalReport.tex
@@ -49,6 +49,9 @@ is a game that uses augmented reality technology to simulate lasers and objects 
 \input{SIG/Evaluation1.tex}
 \input{SIG/Evaluation2.tex}
 
+% Info sheet
+\input{InfoSheet.tex}
+
 \pagebreak
 \addcontentsline{toc}{chapter}{Bibliography}
 \bibliography{Bibliography}
