Finish level class diagram and add to report

--- a/Reports/Final Report/Design.tex
+++ b/Reports/Final Report/Design.tex
@@ -243,6 +243,12 @@
                 \caption{Tiled Map Editor Window}
                 \label{fig:tilededitor}
             \end{figure}
+
+            \begin{figure}[ht]
+				\includegraphics[width=\textwidth]{ClassDiagramLevel}
+				\caption{Class diagram of the \texttt{Level} component}
+				\label{fig:classdiagramlevel}
+			\end{figure}
 			
 		\subsection{The Graphics component}
 			The \texttt{Graphics} component provides graphical functionality to 
